--- a/style.css
+++ b/style.css
@@ -118,8 +118,8 @@ body {
 
 .six img {
   display: inline-block;
-  max-width: 100%;
-  height: auto;
+  max-width: 50%;
+  height: 50%;
 }
 
 .six .hat {
