--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .one {
-  font-size: 4.5rem;
+  font-size: 2rem;
 }
 
 .one > img {
@@ -49,7 +49,7 @@ body {
 }
 
 .two {
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-weight: lighter;
 }
 
@@ -109,7 +109,7 @@ body {
 }
 
 .idea-6 span {
-  font-size: 15rem;
+  font-size: 6rem;
 }
 
 .six {
@@ -118,8 +118,8 @@ body {
 
 .six img {
   display: inline-block;
-  max-width: 50%;
-  height: 50%;
+  max-width: 100%;
+  height: auto;
 }
 
 .six .hat {
@@ -127,7 +127,7 @@ body {
   width: 80px;
   top: -35px;
   left: 41.5%;
-  /* transform: scale(0.1); */
+  transform: scale(0.1);
 }
 
 .baloons img {
